Story #3190094 : Upgraded from Junit 5 to Junit 6,updated SDK version in pom files, corrected som etests that were disabled